--- a/3DAdventureIn2D/package.yaml
+++ b/3DAdventureIn2D/package.yaml
@@ -4,7 +4,7 @@ github:              "githubuser/3DAdventureIn2D"
 license:             BSD3
 author:              "Johannes Ganser"
 maintainer:          "ganser@uni-bremen.de"
-copyright:           "2018 Johannes Ganser"
+copyright:           "2020 Johannes Ganser"
 
 extra-source-files:
 - README.md
@@ -24,6 +24,7 @@ dependencies:
 #- Yampa >= 0.11 && < 0.20
 - hsnoise >= 0.0.2
 - processing-for-haskell >= 0.1.0.1
+- extra >= 1.6.18
 #- xeno >= 0.3.4
 
 library:
