--- a/3DAdventureIn2D/stack.yaml
+++ b/3DAdventureIn2D/stack.yaml
@@ -42,6 +42,7 @@ extra-deps:
 #- Yampa-0.11
 - hsnoise-0.0.2
 - processing-for-haskell-0.1.0.1
+- extra-1.6.18
 #- xeno-0.3.4
 # Override default flag values for local packages and extra-deps
 # flags: {}
