--- a/3DAdventureIn2D/package.yaml
+++ b/3DAdventureIn2D/package.yaml
@@ -25,6 +25,7 @@ dependencies:
 - hsnoise >= 0.0.2
 - processing-for-haskell >= 0.1.0.1
 - extra >= 1.6.18
+- random >= 1.1
 #- xeno >= 0.3.4
 
 library:
