--- a/3DAdventureIn2D/package.yaml
+++ b/3DAdventureIn2D/package.yaml
@@ -26,6 +26,7 @@ dependencies:
 - processing-for-haskell >= 0.1.0.1
 - extra >= 1.6.18
 - random >= 1.1
+- vector >= 0.12.1.2
 #- xeno >= 0.3.4
 
 library:
