--- a/3DAdventureIn2D/package.yaml
+++ b/3DAdventureIn2D/package.yaml
@@ -1,14 +1,13 @@
 name:                3DAdventureIn2D
 version:             0.1.0.0
-github:              "githubuser/3DAdventureIn2D"
+github:              "jganser/3DAdventureIn2D"
 license:             BSD3
 author:              "Johannes Ganser"
 maintainer:          "ganser@uni-bremen.de"
 copyright:           "2020 Johannes Ganser"
 
 extra-source-files:
-- README.md
-- ChangeLog.md
+- "A Flatlands Adventure.md"
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -44,13 +43,3 @@ executables:
     dependencies:
     - 3DAdventureIn2D
 
-tests:
-  3DAdventureIn2D-test:
-    main:                Spec.hs
-    source-dirs:         test
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - 3DAdventureIn2D
